libs/extractor/tests/snapshots/snapshots/extractor__tests__vanilla_extract_style_no_length.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"no-length.css.ts\",\nr#\"import { style } from '@devup-ui/react'\nexport const box = style({ padding: 8, margin: 4 })\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "16px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "32px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const box = \"a b\";\n",
}
