libs/extractor/tests/snapshots/snapshots/extractor__tests__vanilla_extract_theme_without_vars_name.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"theme-two-arg.css.ts\",\nr#\"import { createThemeContract, createTheme } from '@devup-ui/react'\nconst contract = createThemeContract({\n  color: {\n    brand: null,\n    text: null\n  }\n})\nexport const darkTheme = createTheme(contract, {\n  color: {\n    brand: 'white',\n    text: 'lightgray'\n  }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "--color-brand",
                value: "white",
                level: 0,
                selector: Some(
                    Global(
                        ".f0_darkTheme",
                        "theme-two-arg.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--color-text",
                value: "lightgray",
                level: 0,
                selector: Some(
                    Global(
                        ".f0_darkTheme",
                        "theme-two-arg.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const darkTheme = \"f0_darkTheme\";\n;\n",
}
